<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/item_background">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/adViewBannerDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@color/item_background"
                android:orientation="horizontal" />

            <TextView
                android:id="@+id/txt_title_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/download_msg"
                android:textAllCaps="true"
                android:textColor="@color/item_text_color"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_cancel_play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_check"
                    android:text="@string/cancel_btn_text"
                    android:textColor="@color/item_text_color" />

                <Button
                    android:id="@+id/btn_continue_play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_gradient_accent"
                    android:text="@string/continue_btn_text"
                    android:textColor="@color/item_text_color" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>